fix overflow on mobile

--- a/main.css
+++ b/main.css
@@ -86,6 +86,12 @@ footer a {
   }
 }
 
+@media (max-width: 800px) {
+  menu li {
+  padding: 0 0.5em;
+}
+}
+
 .my-custom-btn { 
     background-color: var(--main-color); 
     color: var(--background-color); 
